--- a/index.css
+++ b/index.css
@@ -1,3 +1,67 @@
 div {
   font-family: 'Montserrat', sans-serif;
 }
+
+html {
+  background-color: #f4f0cb;
+}
+
+body {
+  margin: 0;
+}
+
+#app {
+  margin-left: 20%;
+  margin-right: 20%;
+  padding: 20px;
+  background-color: #ded29e;
+  height: 100vh;
+  color: #685642;
+  text-align: center;
+}
+
+h1 {
+  margin-bottom: 0;
+  margin-top: 0;
+}
+
+h2 {
+  margin-bottom: 10px;
+}
+
+.email {
+  margin-top: 0;
+  margin-bottom: 10px;
+  font-size: 0.9em;
+
+}
+
+.experience {
+}
+
+.job-item {
+  padding-bottom: 15px;
+  margin: 5px;
+}
+
+.degree-item {
+  padding-bottom: 15px;
+  margin: 5px;
+}
+
+.introduction {
+  padding-bottom: 15px;
+}
+
+.skill {
+  padding-bottom: 3px;
+}
+
+.section {
+  padding-bottom: 10px;
+  border-bottom: #B3A580 solid 1px;
+}
+
+.section:last-child{
+  border-bottom: none;
+}
