--- a/index.css
+++ b/index.css
@@ -11,9 +11,9 @@ body {
 }
 
 .topbar {
-  position: absolute;
+  position: fixed;
   left: 0;
-  top: 0;
+  bottom: 0;
   background-color: #685642;
   color: #F4F0CB;
   height: 40px;
@@ -35,6 +35,7 @@ body {
 
 #app {
   margin-top: 40px;
+  margin-bottom: 80px;
   margin-left: 20%;
   margin-right: 20%;
   padding: 20px;
