--- a/index.css
+++ b/index.css
@@ -40,9 +40,9 @@ body {
   margin-right: 20%;
   padding: 20px;
   background-color: #ded29e;
-  height: 100vh;
   color: #685642;
   text-align: center;
+  box-shadow: 1px 2px 3px;
 }
 
 h1 {
